--- a/package.json
+++ b/package.json
@@ -14,16 +14,15 @@
     "node": "10.19.0",
     "npm": "6.14.10"
   },
-
   "private": true,
   "dependencies": {
     "@angular-devkit/build-angular": "~0.1001.2",
-    "@angular/cli": "~10.1.2",
-    "@angular/compiler-cli": "~10.1.2",
     "@angular/animations": "~10.1.2",
     "@angular/cdk": "^10.2.7",
+    "@angular/cli": "~10.1.2",
     "@angular/common": "~10.1.2",
     "@angular/compiler": "~10.1.2",
+    "@angular/compiler-cli": "~10.1.2",
     "@angular/core": "~10.1.2",
     "@angular/forms": "~10.1.2",
     "@angular/localize": "^11.2.5",
@@ -34,11 +33,12 @@
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "bootstrap": "^4.5.0",
     "express": "^4.17.1",
+    "ngx-bar-rating": "^2.0.0",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@types/node": "^12.11.1",
